Created Maven App v1.0

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+          some text here
         </plugin>
       </plugins>
     </pluginManagement>
